new visualizations and adding in validation set to model training

--- a/Supervised_CNN.ipynb
+++ b/Supervised_CNN.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "10WdpyFVm5G8J5AJrHPelKDpmooAreyPw",
-      "authorship_tag": "ABX9TyMKBfA9umGaiJAoo3xLZRmE",
+      "authorship_tag": "ABX9TyN0JK7KSSKCN3w2YTlxbOls",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,6 +231,16 @@
         "kernel_size = 3\n",
         "stride = 1\n",
         "padding = 1 #2*floor(3/2)\n",
+        "\n",
+        "accuracy_stats = {\n",
+        "    'train': [],\n",
+        "    'val': []\n",
+        "}\n",
+        "\n",
+        "loss_stats = {\n",
+        "    'train': [],\n",
+        "    'val': []\n",
+        "}\n",
         "#activation function"
       ],
       "execution_count": 4,
@@ -256,7 +266,7 @@
         "tst_lb_path = \"Dementia_label_data/val_labels_im_nobal.npy\"\n",
         "\n",
         "training_data, y_train_tensor = ld.load_np_files(tr_im_path, tr_lb_path)\n",
-        "#validation_data, y_val_tensor = ld.load_np_files(val_im_path, val_lb_path)\n",
+        "validation_data, y_val_tensor = ld.load_np_files(val_im_path, val_lb_path)\n",
         "test_data, y_test_tensor = ld.load_np_files(tst_im_path, tst_lb_path)\n"
       ],
       "execution_count": 5,
@@ -279,7 +289,7 @@
       "source": [
         "# Get image data and label tensors\n",
         "train_loader = torch.utils.data.DataLoader(training_data, batch_size = batch_size, shuffle = True) \n",
-        "#validate_loader = torch.utils.data.DataLoader(validation_data, batch_size = batch_size, shuffle = True)\n",
+        "validate_loader = torch.utils.data.DataLoader(validation_data, batch_size = batch_size, shuffle = True)\n",
         "test_loader = torch.utils.data.DataLoader(test_data, batch_size = batch_size, shuffle = True)\n",
         "\n",
         "\n",
@@ -422,7 +432,7 @@
         "model = ConvNet().to(float).to(device)\n",
         "if torch.cuda.is_available():\n",
         "    model.cuda()\n",
-        "    print('available')\n",
+        "    print('Model training on GPU')\n",
         "\n",
         "#for param in model.parameters():\n",
         "  #print(str(param.data.numpy().shape)+'\\n')\n",
@@ -430,63 +440,111 @@
         "  #print(\"weights fc3: \", model.fc3.weight)\n",
         "\n",
         "# Loss function\n",
-        "criterion = nn.CrossEntropyLoss().to(device)\n",
+        "criterion = nn.CrossEntropyLoss(weight=class_weights.to(device))\n",
         "\n",
         "#Optimizer (can use SGD or ADAM)\n",
         "optimizer = torch.optim.SGD(model.parameters(), lr = learning_rate)#, momentum = 0.9) #or ADAM/ momentum\n",
-        "acc = 0 # accuracy\n",
+        "#acc = 0 # accuracy\n",
         "#epoch = 0 # training episodes\n",
-        "n_total_steps = len(train_loader) \n",
+        "#n_total_steps = len(train_loader) \n",
+        "\n",
+        "print(model)\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "def train_model(epochs):\n",
-        "  # set model in training mode (recommended)\n",
-        "  model.train()\n",
-        "  for epoch in tqdm(range(epochs)):\n",
-        "    losses = []\n",
-        "    running_loss = 0.0\n",
-        "    num_times = 0\n",
-        "    for i, (images, labels) in enumerate(train_loader, 0):\n",
-        "      images = images.to(float).to(device) # for GPU support\n",
-        "      labels = labels.to(device) \n",
+        "def train_val_test_model(epochs):\n",
+        "  for epoch in tqdm(range(1, epochs + 1)):\n",
+        "\n",
+        "    # TRAINING ********************************\n",
+        "    train_epoch_loss = 0\n",
+        "    train_epoch_acc = 0\n",
+        "\n",
+        "    # set model in training mode (recommended)\n",
+        "    model.train()\n",
+        "\n",
+        "    #losses = []\n",
+        "    #running_loss = 0.0\n",
+        "    #num_times = 0\n",
+        "    #for i, (images, labels) in enumerate(train_loader, 0):\n",
+        "    for x_train_batch, y_train_batch in train_loader:\n",
+        "      x_train_batch = x_train_batch.to(float).to(device) # for GPU support\n",
+        "      y_train_batch = y_train_batch.to(device) \n",
         "\n",
         "      # sets gradients to 0 to prevent interference with previous epoch\n",
         "      optimizer.zero_grad()\n",
         "\n",
         "      # Forward pass through NN\n",
-        "      outputs = model(images.to(float))\n",
-        "      loss = criterion(outputs, labels)\n",
+        "      y_train_pred = model(x_train_batch)#.to(float))\n",
+        "      train_loss = criterion(y_train_pred, y_train_batch)\n",
+        "      train_acc = accuracy(y_train_pred, y_train_batch)\n",
         "\n",
         "      # Backward pass, updating weights\n",
-        "      loss.backward()\n",
+        "      train_loss.backward()\n",
         "      optimizer.step()\n",
+        "\n",
+        "      # Statistics\n",
+        "      train_epoch_loss += train_loss.item()\n",
+        "      train_epoch_acc += train_acc.item()\n",
+        "\n",
+        "\n",
+        "    # VALIDATION****************************************   \n",
+        "    with torch.set_grad_enabled(False):\n",
+        "      val_epoch_loss = 0\n",
+        "      val_epoch_acc = 0\n",
+        "      model.eval()\n",
+        "      for x_val_batch, y_val_batch in validate_loader:\n",
+        "        x_val_batch = = x_val_batch.to(float).to(device)\n",
+        "        y_val_batch = y_val_batch.to(device)\n",
+        "            \n",
+        "        # Forward pass\n",
+        "        y_val_pred = model(x_val_batch)   \n",
+        "        val_loss = criterion(y_val_pred, y_val_batch)\n",
+        "        val_acc = multi_acc(y_val_pred, y_val_batch)\n",
+        "            \n",
+        "        val_epoch_loss += val_loss.item()\n",
+        "        val_epoch_acc += val_acc.item()\n",
+        "\n",
+        "    loss_stats['train'].append(train_epoch_loss/len(train_loader))\n",
+        "    loss_stats['val'].append(val_epoch_loss/len(validate_loader))\n",
+        "    accuracy_stats['train'].append(train_epoch_acc/len(train_loader))\n",
+        "    accuracy_stats['val'].append(val_epoch_acc/len(validate_loader))\n",
+        "                              \n",
+        "    \n",
+        "    print(f'Epoch {epoch+0:03}: Train Loss: {train_epoch_loss/len(train_loader):.5f} | Val Loss: {val_epoch_loss/len(validate_loader):.5f}') \n",
+        "    print(f'Train Acc: {train_epoch_acc/len(train_loader):.3f} | Val Acc: {val_epoch_acc/len(validate_loader):.3f}')\n",
+        "\n",
+        "      # Forward pass through NN\n",
+        "      #outputs = model(images.to(float))\n",
+        "      #loss = criterion(outputs, labels)\n",
+        "\n",
+        "      # Backward pass, updating weights\n",
+        "      #loss.backward()\n",
+        "      #optimizer.step()\n",
         "      #print(model.fc1.weight.detach().numpy())\n",
         "\n",
         "      # Statistics \n",
-        "      running_loss += loss.item()\n",
+        "      #running_loss += loss.item()\n",
         "      # Track every 100th loss:\n",
-        "      if i % 100 == 0:\n",
-        "        losses.append(loss.item())\n",
-        "        num_times = num_times + 1\n",
+        "      #if i % 100 == 0:\n",
+        "        #losses.append(loss.item())\n",
+        "        #num_times = num_times + 1\n",
         "\n",
         "      # print every 500th batch\n",
-        "      if i % 500 == 0:\n",
+        "      #if i % 500 == 0:\n",
         "        #print(\"epoch: {} loss: {}\".format(i, loss))\n",
-        "        print('[%d %d] loss %.4f'% (epoch + 1, i + 1, running_loss/500))\n",
-        "        running_loss = 0.0\n",
+        "        #print('[%d %d] loss %.4f'% (epoch + 1, i + 1, running_loss/500))\n",
+        "        #running_loss = 0.0\n",
         "\n",
-        "    print(\"\\nFinished training Epoch {}\\n\".format(epoch + 1))\n",
-        "    # Calculate the accuracy and save the model state  \n",
-        "    accuracy()\n",
+        "    #print(\"\\nFinished training Epoch {}\\n\".format(epoch + 1))\n",
+        "  \n",
         "\n",
         "    # Plot the loss\n",
-        "    plt.plot([i for i in range(num_times)],losses, label = 'epoch' + str(epoch))\n",
-        "    plt.legend(loc = 1, mode = 'expanded', shadow = True, ncol = 2)\n",
-        "  plt.show()\n",
+        "    #plt.plot([i for i in range(num_times)],losses, label = 'epoch' + str(epoch))\n",
+        "    #plt.legend(loc = 1, mode = 'expanded', shadow = True, ncol = 2)\n",
+        "  #plt.show()\n",
         "\n",
         "  los_chart(losses)\n",
         "\n",
@@ -510,7 +568,20 @@
         "\n",
         "\n",
         "\n",
-        "def accuracy():\n",
+        "def accuracy(y_pred, y_test):\n",
+        "  y_pred_softmax = torch.log_softmax(y_pred, dim = 1)\n",
+        "  _, y_pred_prob = torch.max(y_pred_softmax, dim = 1)\n",
+        "\n",
+        "  correct_pred = (y_pred_prob == y_test).float()\n",
+        "  acc = correct_pred.sum() / len(correct_pred)\n",
+        "\n",
+        "  acc = torch.round(acc * 100)\n",
+        "\n",
+        "  return acc\n",
+        "\n",
+        "\n",
+        "\n",
+        "  \"\"\"\n",
         "  model.eval()\n",
         "  # Calculate performance\n",
         "  correct = 0\n",
@@ -532,10 +603,27 @@
         "        accuracy = (correct/total) * 100\n",
         "      \n",
         "      \n",
-        "      print('Accuracy = '+str(accuracy))\n",
+        "      print('Accuracy = '+str(accuracy))\"\"\"\n",
         "\n",
         "\n",
-        "\n",
+        "\"\"\"# TESTING****************************************   \n",
+        "    with torch.set_grad_enabled(False):\n",
+        "        \n",
+        "        tst_epoch_loss = 0\n",
+        "        tst_epoch_acc = 0\n",
+        "        \n",
+        "        model.eval()\n",
+        "        for x_tst_batch, y_tst_batch in test_loader:\n",
+        "            x_tst_batch = x_tst_batch.to(float).to(device) # for GPU support\n",
+        "            y_tst_batch = y_tst_batch.to(device)\n",
+        "            \n",
+        "            # Forward pass\n",
+        "            y_tst_pred = model(x_tst_batch)\n",
+        "            tst_loss = criterion(y_tst_pred, y_tst_batch)\n",
+        "            tst_acc = accuracy(y_tst_pred, y_tst_batch)\n",
+        "            \n",
+        "            tst_epoch_loss += tst_loss.item()\n",
+        "            tst_epoch_acc += tst_acc.item()\"\"\"\n",
         "\n",
         "\n",
         "\n",
@@ -549,7 +637,7 @@
         "\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "  train_model(20)\n",
+        "  train_val_test_model(10)\n",
         "\n",
         "\n",
         "\n",
@@ -1001,6 +1089,61 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "rHUjtLim2mdN"
+      },
+      "source": [
+        "# Visualize the Training and Validation\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wv3SoFHj2ssM"
+      },
+      "source": [
+        "# Create dataframes\n",
+        "train_val_acc_df = pd.DataFrame.from_dict(accuracy_stats).reset_index().melt(id_vars=['index']).rename(columns={\"index\":\"epochs\"})\n",
+        "train_val_loss_df = pd.DataFrame.from_dict(loss_stats).reset_index().melt(id_vars=['index']).rename(columns={\"index\":\"epochs\"})\n",
+        "# Plot the dataframes\n",
+        "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(20,7))\n",
+        "sns.lineplot(data=train_val_acc_df, x = \"epochs\", y=\"value\", hue=\"variable\",  ax=axes[0]).set_title('Train-Val Accuracy/Epoch')\n",
+        "sns.lineplot(data=train_val_loss_df, x = \"epochs\", y=\"value\", hue=\"variable\", ax=axes[1]).set_title('Train-Val Loss/Epoch')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ITYjyxcK2a9P"
+      },
+      "source": [
+        "# Evaluate the model using Test Set"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xdzh8eja2abl"
+      },
+      "source": [
+        "all_preds = []\n",
+        "with torch.set_grad_enabled(False):\n",
+        "  model.eval()\n",
+        "  for x_test_batch, _ in test_loader:\n",
+        "    x_test_batch = x_test_batch.to(float).to(device)\n",
+        "    y_test_pred = model(x_test_batch)\n",
+        "    _, y_pred_probs = torch.max(y_test_pred, dim = 1)\n",
+        "    all_preds.append(y_pred_probs.cpu().numpy())\n",
+        "\n",
+        "all_preds = [a.squeeze().tolist() for a in all_preds]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "c4OOWwEWrW2-"
       },
       "source": [
@@ -1018,7 +1161,7 @@
         "outputId": "18bde3f6-acd7-4e99-d1f1-730b59d46405"
       },
       "source": [
-        "def conf_matrix(model, loader):\n",
+        "\"\"\"def conf_matrix(model, loader):\n",
         "  model.eval()\n",
         "  all_preds = torch.tensor([])\n",
         "  with torch.set_grad_enabled(False):\n",
@@ -1034,7 +1177,7 @@
         "  print(y_test_tensor.size())\n",
         "  print(y_test.size())\n",
         "  print(y_train_tensor.size())\n",
-        "  return all_preds\n",
+        "  return all_preds\"\"\"\n",
         "\n",
         "\n",
         "\n",
@@ -1042,7 +1185,7 @@
         "\n",
         "\n",
         "def plot_conf_matrix(matrix, class_names, session):\n",
-        "  df_cm = pd.DataFrame(matrix.numpy(), class_names, class_names)\n",
+        "  df_cm = pd.DataFrame(matrix, class_names, class_names) #matrix.numpy()\n",
         "  df_cm.to_csv(\"/content/gdrive/MyDrive/Colab Notebooks/model_charts/conf_matrix_{}\".format(session))\n",
         "  plt.figure(figsize = (9,6))\n",
         "  sns.heatmap(df_cm, annot=True, fmt=\".2f\", cmap='BuGn')\n",
@@ -1055,15 +1198,16 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        "all_pred = conf_matrix(model, train_loader)\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "#all_pred = conf_matrix(model, train_loader)\n",
         "confmat = ConfusionMatrix(num_classes = 3)\n",
-        "cmtx = confmat(all_pred, y_train_tensor)\n",
+        "cmtx = confmat(y_train_tensor.numpy(), all_pred)\n",
+        "#cmtx = confmat(all_pred, y_train_tensor)\n",
         "class_names = [\"Possible Dementia\", \"Likely Dementia\", \"No Dementia\"]\n",
         "class_vals = [0,1,2]\n",
-        "plot_conf_matrix(cmtx, class_names, 1)\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "print(classification_report(y_train_tensor, all_pred.argmax(axis=1), class_vals))"
+        "plot_conf_matrix(cmtx, class_names, 2)\n",
+        "print(classification_report(y_train_tensor.numpy(), all_pred, class_vals))\n",
+        "#print(classification_report(y_train_tensor, all_pred.argmax(axis=1), class_vals))"
       ],
       "execution_count": 9,
       "outputs": [
@@ -1089,39 +1233,6 @@
             "needs_background": "light"
           }
         },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.33      0.33      0.33      7881\n",
-            "           1       0.33      0.33      0.33      7695\n",
-            "           2       0.34      0.34      0.34      7959\n",
-            "\n",
-            "    accuracy                           0.33     23535\n",
-            "   macro avg       0.33      0.33      0.33     23535\n",
-            "weighted avg       0.33      0.33      0.33     23535\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "grWhUCAe1mgo",
-        "outputId": "42714c25-570b-4e12-db65-958fce44ffe7"
-      },
-      "source": [
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "print(classification_report(y_train_tensor, all_pred.argmax(axis=1), class_vals))"
-      ],
-      "execution_count": 10,
-      "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
