with save of output

--- a/multimodel1.ipynb
+++ b/multimodel1.ipynb
@@ -6,7 +6,7 @@
       "name": "multimodel1.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPlXGTqbz6XN3aLBDHccu0/",
+      "authorship_tag": "ABX9TyPbu9SM7EDXXiRsQKBgbNNa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -370,12 +370,12 @@
       "source": [
         "train_loader = torch.utils.data.DataLoader(training_data, batch_size = batch_size, shuffle = True) \n",
         "validate_loader = torch.utils.data.DataLoader(validation_data, batch_size = batch_size, shuffle = True)\n",
-        "test_loader = torch.utils.data.DataLoader(test_data, batch_size = batch_size, shuffle = True)\n",
+        "test_loader = torch.utils.data.DataLoader(test_data, batch_size = batch_size, shuffle = False)\n",
         "#Labels \n",
         "#classes = (0.0, 1.0, 2.0, 3.0, 4.0, 5.0)\n",
         "classes = (0, 1, 2, 3, 4, 5)"
       ],
-      "execution_count": 15,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -528,7 +528,6 @@
         "    # set model in training mode (recommended)\n",
         "    model.train()\n",
         "\n",
-        "    \n",
         "    # Double check\n",
         "    tr_run_loss=0\n",
         "    tr_correct=0\n",
@@ -620,7 +619,6 @@
         "    loss_stats['val'].append(val_epoch_loss/len(validate_loader))\n",
         "    accuracy_stats['train'].append(train_epoch_acc/len(train_loader))\n",
         "    accuracy_stats['val'].append(val_epoch_acc/len(validate_loader))\n",
-        "                              \n",
         "    \n",
         "    print(f'Epoch {epoch+0:03}: Train Loss: {train_epoch_loss/len(train_loader):.5f} | \\\n",
         "    Val Loss: {val_epoch_loss/len(validate_loader):.5f}')\n",
@@ -1368,7 +1366,7 @@
         "    all_preds = torch.cat((all_preds.cpu(), y_pred_probs.cpu()),dim = 0)\n",
         "    y_test = torch.cat((y_test, y_test_batch), dim = 0) "
       ],
-      "execution_count": 24,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -1378,13 +1376,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3xnsdaK2i6yk",
-        "outputId": "885c85ce-977b-4c13-fe6b-290838a5f6d2"
+        "outputId": "bea826ca-cac0-46a8-fbc1-1c7f92cf765d"
       },
       "source": [
         "len(y_test)\n",
         "len(all_preds)"
       ],
-      "execution_count": 32,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1394,7 +1392,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 42
         }
       ]
     },
@@ -1406,7 +1404,7 @@
           "height": 279
         },
         "id": "3yYSW01UiLMT",
-        "outputId": "ad7e6f8d-fe8d-4d70-a871-cdfa91cd2ae0"
+        "outputId": "01402cee-cc32-416d-e67a-f5e26b4bb707"
       },
       "source": [
         "confusion_matrix_df = pd.DataFrame(confusion_matrix(y_test, all_preds))#.rename(columns=idx2class, index=idx2class)\n",
@@ -1415,7 +1413,7 @@
         "plt.ylabel(\"label (ground truth)\")\n",
         "plt.show()"
       ],
-      "execution_count": 33,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1446,7 +1444,7 @@
         "  plt.ylabel(\"label (ground truth)\")\n",
         "  plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -1456,7 +1454,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fOIU0SazjMiW",
-        "outputId": "3836de6c-f70b-49f7-d10f-8075462a4c65"
+        "outputId": "87e326fd-e21d-4cc2-9827-8d675b0c7599"
       },
       "source": [
         "from sklearn.metrics import classification_report, confusion_matrix\n",
@@ -1471,7 +1469,7 @@
         "#print(classification_report(y_train_tensor.numpy(), all_preds, class_vals))\n",
         "#print(classification_report(y_train_tensor, all_pred.argmax(axis=1), class_vals))"
       ],
-      "execution_count": 39,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -1498,6 +1496,28 @@
       "cell_type": "code",
       "metadata": {
         "id": "v2cEWgQBjOk9"
+      },
+      "source": [
+        "test_dict_preds = all_preds.cpu().numpy()"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yW0ROihspVLG"
+      },
+      "source": [
+        "# np.savetxt(\"/content/gdrive/MyDrive/y_preds_firstrun.csv\", test_dict_preds)"
+      ],
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PGzXp0R7piI9"
       },
       "source": [
         ""
