--- a/multimodel2.ipynb
+++ b/multimodel2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "multimodel2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN1FC3SGZofTk6VIFi9OkSw",
+      "authorship_tag": "ABX9TyM0Y8lULw5MVO1yWzGtsIFg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,10 +112,14 @@
         "from sklearn.decomposition import PCA\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.naive_bayes import ComplementNB\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "import seaborn as sns\n",
         "%matplotlib inline"
       ],
-      "execution_count": 66,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -482,7 +486,170 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t7Vz2rxpQYHf"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t7Vz2rxpQYHf",
+        "outputId": "2bd5a156-5f9a-4c6d-9058-85e9b7798071"
+      },
+      "source": [
+        "gnb = GaussianNB()\n",
+        "y_pred = gnb.fit(X_train, y_train).predict(X_test)\n",
+        "print(\"Number of mislabeled points out of a total %d points : %d\"\n",
+        "      % (X_test.shape[0], (y_test != y_pred).sum()))\n",
+        "print(\"percent correct: \", (X_test.shape[0]-(y_test != y_pred).sum()) / X_test.shape[0])"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of mislabeled points out of a total 12841 points : 1571\n",
+            "percent correct:  0.877657503309711\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bs9nIoC4UukJ",
+        "outputId": "334241c3-b0e4-45a5-c907-b98f9b0bacf7"
+      },
+      "source": [
+        "cnb = ComplementNB()\n",
+        "y_pred = cnb.fit(X_train, y_train).predict(X_test)\n",
+        "print(\"Number of mislabeled points out of a total %d points : %d\"\n",
+        "      % (X_test.shape[0], (y_test != y_pred).sum()))\n",
+        "print(\"percent correct: \", (X_test.shape[0]-(y_test != y_pred).sum()) / X_test.shape[0])"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of mislabeled points out of a total 12841 points : 2885\n",
+            "percent correct:  0.7753290242192976\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6Nom7ljbXFVY"
+      },
+      "source": [
+        "## KNN Classifier"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KltFotiiYIaV"
+      },
+      "source": [
+        "# loop through different n_neighbors "
+      ],
+      "execution_count": 109,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gqhOZ2koXOHb",
+        "outputId": "4582522a-065a-4332-937b-07b9f22eadd8"
+      },
+      "source": [
+        "neigh = KNeighborsClassifier(n_neighbors=3)\n",
+        "y_pred = neigh.fit(X_train, y_train).predict(X_test)\n",
+        "print(\"Number of mislabeled points out of a total %d points : %d\"\n",
+        "      % (X_test.shape[0], (y_test != y_pred).sum()))\n",
+        "print(\"percent correct: \", (X_test.shape[0]-(y_test != y_pred).sum()) / X_test.shape[0])"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of mislabeled points out of a total 12841 points : 285\n",
+            "percent correct:  0.9778054668639514\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l0hJsYoxXOEf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3bVXbdpqXKYl"
+      },
+      "source": [
+        "## Random Forest Classifier"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RNGQAMibYF9W"
+      },
+      "source": [
+        "# loop through different depths"
+      ],
+      "execution_count": 110,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9oBqH4G3XNgJ",
+        "outputId": "2158a326-1841-413a-dbe2-72b8808d482d"
+      },
+      "source": [
+        "rf = RandomForestClassifier(max_depth=3, random_state=42)\n",
+        "y_pred = rf.fit(X_train, y_train).predict(X_test)\n",
+        "print(\"Number of mislabeled points out of a total %d points : %d\"\n",
+        "      % (X_test.shape[0], (y_test != y_pred).sum()))\n",
+        "print(\"percent correct: \", (X_test.shape[0]-(y_test != y_pred).sum()) / X_test.shape[0])"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of mislabeled points out of a total 12841 points : 854\n",
+            "percent correct:  0.9334942761467175\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "da0d85pBXNdy"
       },
       "source": [
         ""
