--- a/Supervised_CNN.ipynb
+++ b/Supervised_CNN.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "10WdpyFVm5G8J5AJrHPelKDpmooAreyPw",
-      "authorship_tag": "ABX9TyOyt2lrTSKmbA1pbFpoKFzX",
+      "authorship_tag": "ABX9TyPBo+IspCJ4IbqkB6HaaqbS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -305,9 +305,9 @@
         "  tst_im_path = \"/content/gdrive/MyDrive/Colab Notebooks/numpy_files/Dementia_label_data/test_im_nobal.npy\"\n",
         "  tst_lb_path = \"/content/gdrive/MyDrive/Colab Notebooks/numpy_files/Dementia_label_data/val_labels_im_nobal.npy\"\n",
         "\n",
-        "  training_data, y_train_tensor = ld.load_np_files(tr_im_path, tr_lb_path)\n",
-        "  validation_data, y_val_tensor = ld.load_np_files(val_im_path, val_lb_path)\n",
-        "  test_data, y_test_tensor = ld.load_np_files(tst_im_path, tst_lb_path)\n",
+        "  train_set, y_train_tensor = ld.load_np_files(tr_im_path, tr_lb_path)\n",
+        "  val_set, y_val_tensor = ld.load_np_files(val_im_path, val_lb_path)\n",
+        "  test_set, y_test_tensor = ld.load_np_files(tst_im_path, tst_lb_path)\n",
         "  \"\"\"\n",
         "  #\n",
         "  #round_val = [1,2,3,4,5,6,7,8,9,10]\n",
@@ -485,25 +485,35 @@
         "# initialize transformation: data to tensor and normalize\n",
         "# Could probably resize using torch.transforms\n",
         "normalize_ = 'False'\n",
+        "rgb_val = None\n",
+        "\n",
         "if normalize_ == 'True':\n",
         "  processes = transforms.Compose([\n",
         "          transforms.ToTensor(),\n",
         "          transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
         "      ])\n",
+        "  rgb_val = 'True'\n",
         "else:\n",
         "  processes = transforms.ToTensor()\n",
+        "\n",
+        "\n",
         "\n",
         "# Define which round to get data from\n",
         "rnd = 7\n",
         "\n",
-        "# Get the data from S3 and perform transformations\n",
-        "train_set = ResizedClocks(rnd, dictionarytr[rnd], transform = processes, rgb = None)\n",
-        "val_set = ResizedClocks(rnd, dictionaryv[rnd], transform = processes, rgb = None)\n",
-        "test_set = ResizedClocks(rnd, dictionaryts[rnd], transform = processes, rgb = None)\n",
+        "if numpy_ == 'False':\n",
+        "  # Get the data from S3 and perform transformations\n",
+        "  train_set = ResizedClocks(rnd, dictionarytr[rnd], transform = processes, rgb = None)\n",
+        "  val_set = ResizedClocks(rnd, dictionaryv[rnd], transform = processes, rgb = None)\n",
+        "  test_set = ResizedClocks(rnd, dictionaryts[rnd], transform = processes, rgb = None)\n",
+        "\n",
+        "\n",
         "\n",
         "# Define Dataloaders for the network\n",
         "train_loader = torch.utils.data.DataLoader(train_set, batch_size = train_batch_size, shuffle = True, num_workers = 6, collate_fn=collate_fn) \n",
         "validate_loader = torch.utils.data.DataLoader(val_set, batch_size = val_batch, shuffle = True, num_workers = 6, collate_fn=collate_fn) #64, 8,1\n",
+        "\n",
+        "\n",
         "\n",
         "# For round 10, there are some corrupt data that when batched at size 1 is not taken\n",
         "# care of by the collate function, but Nonechucks library skips the missing data and \n",
@@ -533,6 +543,7 @@
       },
       "source": [
         "# Visualize the validation data if grayscale \n",
+        "# Code taken and adapted from Pytorch tutorial\n",
         "#Labels \n",
         "classes = (0, 1, 2)\n",
         "def imshow(img):\n",
@@ -733,7 +744,7 @@
         "\n",
         "# Optimizer (can use SGD or ADAM)\n",
         "#optimizer = torch.optim.Adam(model.parameters(), lr = learning_rate)#, momentum = 0.9) #or ADAM/ momentum\n",
-        "optimizer = torch.optim.SGD(model.parameters(), lr = learning_rate, weight_decay= weight_decay) #or ADAM/ momentum\n",
+        "optimizer = torch.optim.SGD(model.parameters(), lr = learning_rate, weight_decay= weight_decay) \n",
         "\n",
         "#scheduler = lr_scheduler.StepLR(optimizer, step_size = 4, gamma=0.1)\n",
         "scheduler = ReduceLROnPlateau(optimizer, 'min', patience = 4)\n",
@@ -756,8 +767,6 @@
         "\n",
         "\n",
         "def train_val_model(epochs):\n",
-        "  \n",
-        "\n",
         "  for epoch in range(1, epochs + 1):\n",
         "\n",
         "    # TRAINING *****************************************************************\n",
@@ -765,9 +774,8 @@
         "    train_epoch_loss = 0\n",
         "    train_epoch_acc = 0\n",
         "\n",
-        "    # set model in training mode (recommended)\n",
+        "    # set model in training mode \n",
         "    model.train()\n",
-        "    \n",
         "    print('\\nEpoch$ : %d'%epoch)\n",
         "    for x_train_batch, y_train_batch in tqdm(train_loader):\n",
         "      x_train_batch = x_train_batch.to(device)#(float).to(device) # for GPU support\n",
@@ -777,8 +785,7 @@
         "\n",
         "      # sets gradients to 0 to prevent interference with previous epoch\n",
         "      optimizer.zero_grad()\n",
-        "      \n",
-        "\n",
+        "    \n",
         "      # Forward pass through NN\n",
         "      y_train_pred = model(x_train_batch)#.to(float)\n",
         "      train_loss = criterion(y_train_pred, y_train_batch)\n",
@@ -832,6 +839,7 @@
         "\n",
         "\n",
         "def accuracy(y_pred, y_test):\n",
+        "  # Calculating model accuracy at each epoch \n",
         "  y_pred_softmax = torch.log_softmax(y_pred, dim = 1)\n",
         "  _, y_pred_prob = torch.max(y_pred_softmax, dim = 1)\n",
         "  correct_pred = (y_pred_prob == y_test).float()\n",
