fixed global vars and some if/else in model func and resized class

--- a/Supervised_CNN.ipynb
+++ b/Supervised_CNN.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "10WdpyFVm5G8J5AJrHPelKDpmooAreyPw",
-      "authorship_tag": "ABX9TyNvAt6PPCfHQSUSqR5XJXjT",
+      "authorship_tag": "ABX9TyMcLOC55dezNTokxCuJJgRV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -625,9 +625,10 @@
         "id": "KAovKkRXFU4j"
       },
       "source": [
-        "def set_model(m, model_ext):\n",
-        "  # Set to GPU\n",
-        "  device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+        " # Set to GPU\n",
+        "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+        "\n",
+        "def set_model(m, model_ext, device):\n",
         "\n",
         "  if torch.cuda.is_available():\n",
         "    print('First Model training on GPU')\n",
@@ -733,7 +734,7 @@
         "    return x                        \n",
         "    \n",
         "# Get model\n",
-        "model = set_model(m, model_ext)\n",
+        "model = set_model(m, model_ext, device)\n",
         "\n",
         "# Print weights\n",
         "#for param in model.parameters():\n",
