fixed resized class rgb param definition

--- a/Supervised_CNN.ipynb
+++ b/Supervised_CNN.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "10WdpyFVm5G8J5AJrHPelKDpmooAreyPw",
-      "authorship_tag": "ABX9TyMcLOC55dezNTokxCuJJgRV",
+      "authorship_tag": "ABX9TyNcVDp1sl+G/CDRIO4Droui",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,7 +430,7 @@
         "class ResizedClocks():\n",
         "    #Resized clock drawing dataset\n",
         "\n",
-        "    def __init__(self, round, round_labels, transform = None, rgb = None):\n",
+        "    def __init__(self, round, round_labels, transform = None, rgb = rgb):\n",
         "        \n",
         "       # Args:\n",
         "           # round (int): Round to grab images from. \n",
@@ -468,7 +468,7 @@
         "          else:\n",
         "            gray = im.convert('1')\n",
         "\n",
-        "          resized = gray.resize((160, 207))#(2560, 3312)) \n",
+        "          resized = gray.resize((160, 207))#(2560, 3312)) #((284,386))\n",
         "          #resized = gray.resize((512, 662)) \n",
         "          im_arr = np.float32(np.array(resized))#.astype(float)\n",
         "          \n",
@@ -515,9 +515,9 @@
         "\n",
         "if numpy_ == 'False':\n",
         "  # Get the data from S3 and perform transformations\n",
-        "  train_set = ResizedClocks(rnd, dictionarytr[rnd], transform = processes, rgb = None)\n",
-        "  val_set = ResizedClocks(rnd, dictionaryv[rnd], transform = processes, rgb = None)\n",
-        "  test_set = ResizedClocks(rnd, dictionaryts[rnd], transform = processes, rgb = None)\n",
+        "  train_set = ResizedClocks(rnd, dictionarytr[rnd], transform = processes, rgb = rgb_val)\n",
+        "  val_set = ResizedClocks(rnd, dictionaryv[rnd], transform = processes, rgb = rgb_val)\n",
+        "  test_set = ResizedClocks(rnd, dictionaryts[rnd], transform = processes, rgb = rgb_val)\n",
         "\n",
         "\n",
         "\n",
