--- a/Supervised_CNN.ipynb
+++ b/Supervised_CNN.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "10WdpyFVm5G8J5AJrHPelKDpmooAreyPw",
-      "authorship_tag": "ABX9TyNcVDp1sl+G/CDRIO4Droui",
+      "authorship_tag": "ABX9TyNFWTJX2sqZVMrlYbYyrEbI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -308,7 +308,6 @@
         "\n",
         "# Normalize data if rgb and set rgb_val to True to convert \n",
         "normalize_ = 'False'\n",
-        "rgb_val = None\n",
         "\n",
         "# Define which round to get data from\n",
         "rnd = 7\n",
@@ -424,13 +423,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LRWVXZaQ2Uid"
+        "id": "kne45tSsQvFQ"
       },
       "source": [
         "class ResizedClocks():\n",
         "    #Resized clock drawing dataset\n",
         "\n",
-        "    def __init__(self, round, round_labels, transform = None, rgb = rgb):\n",
+        "    def __init__(self, round, round_labels, rgb = None, transform = None):\n",
         "        \n",
         "       # Args:\n",
         "           # round (int): Round to grab images from. \n",
@@ -464,11 +463,15 @@
         "          im = Image.open(temp.name)#filename)\n",
         "\n",
         "          if self.rgb:\n",
-        "            gray = im.convert('RGB')\n",
+        "            #print('rgb')\n",
+        "            gray = self.rgb(im)\n",
+        "            \n",
         "          else:\n",
+        "            #print('gray')\n",
         "            gray = im.convert('1')\n",
         "\n",
-        "          resized = gray.resize((160, 207))#(2560, 3312)) #((284,386))\n",
+        "            \n",
+        "          resized = gray.resize((160, 207))#284, 368))#(2560, 3312)) \n",
         "          #resized = gray.resize((512, 662)) \n",
         "          im_arr = np.float32(np.array(resized))#.astype(float)\n",
         "          \n",
@@ -502,6 +505,7 @@
         "# initialize transformation: data to tensor and normalize\n",
         "# Could probably resize using torch.transforms\n",
         "\n",
+        "\n",
         "if normalize_ == 'True':\n",
         "  processes = transforms.Compose([\n",
         "          transforms.ToTensor(),\n",
@@ -510,9 +514,11 @@
         "  rgb_val = 'True'\n",
         "else:\n",
         "  processes = transforms.ToTensor()\n",
+        "  rgb_val = None\n",
         "\n",
         "\n",
         "\n",
+        "# Define which round to get data from\n",
         "if numpy_ == 'False':\n",
         "  # Get the data from S3 and perform transformations\n",
         "  train_set = ResizedClocks(rnd, dictionarytr[rnd], transform = processes, rgb = rgb_val)\n",
@@ -520,11 +526,9 @@
         "  test_set = ResizedClocks(rnd, dictionaryts[rnd], transform = processes, rgb = rgb_val)\n",
         "\n",
         "\n",
-        "\n",
         "# Define Dataloaders for the network\n",
         "train_loader = torch.utils.data.DataLoader(train_set, batch_size = train_batch_size, shuffle = True, num_workers = 6, collate_fn=collate_fn) \n",
         "validate_loader = torch.utils.data.DataLoader(val_set, batch_size = val_batch, shuffle = True, num_workers = 6, collate_fn=collate_fn) #64, 8,1\n",
-        "\n",
         "\n",
         "\n",
         "# For round 10, there are some corrupt data that when batched at size 1 is not taken\n",
