--- a/Supervised_CNN.ipynb
+++ b/Supervised_CNN.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "10WdpyFVm5G8J5AJrHPelKDpmooAreyPw",
-      "authorship_tag": "ABX9TyPk2Dt4AKL4ziN1LA0arMGo",
+      "authorship_tag": "ABX9TyOxBOtaQufhiIZqx/f/hNSl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,7 +464,7 @@
         "\n",
         "          if self.rgb:\n",
         "            #print('rgb')\n",
-        "            gray = im.convert('rgb')\n",
+        "            gray = im.convert('RGB')\n",
         "            \n",
         "          else:\n",
         "            #print('gray')\n",
