hashed out save calls to prevent breaking when running

--- a/presentation_Supervised_CNN.ipynb
+++ b/presentation_Supervised_CNN.ipynb
@@ -602,13 +602,13 @@
         "# Create dataframes\n",
         "train_val_acc_df = pd.DataFrame.from_dict(accuracy_stats).reset_index().melt(id_vars=['index']).rename(columns={\"index\":\"epochs\"})\n",
         "train_val_loss_df = pd.DataFrame.from_dict(loss_stats).reset_index().melt(id_vars=['index']).rename(columns={\"index\":\"epochs\"})\n",
-        "train_val_acc_df.to_csv('/content/gdrive/MyDrive/Colab Notebooks/acc_loss/acc{}.csv'.format(extension_), index = False)\n",
-        "train_val_loss_df.to_csv('/content/gdrive/MyDrive/Colab Notebooks/acc_loss/loss{}.csv'.format(extension_), index = False)\n",
+        "#train_val_acc_df.to_csv('/content/gdrive/MyDrive/Colab Notebooks/acc_loss/acc{}.csv'.format(extension_), index = False)\n",
+        "#train_val_loss_df.to_csv('/content/gdrive/MyDrive/Colab Notebooks/acc_loss/loss{}.csv'.format(extension_), index = False)\n",
         "# Plot the dataframes\n",
         "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(20,7))\n",
         "sns.lineplot(data=train_val_acc_df, x = \"epochs\", y=\"value\", hue=\"variable\",  ax=axes[0]).set_title('Train-Val Accuracy/Epoch')\n",
         "sns.lineplot(data=train_val_loss_df, x = \"epochs\", y=\"value\", hue=\"variable\", ax=axes[1]).set_title('Train-Val Loss/Epoch')\n",
-        "fig.savefig('/content/gdrive/MyDrive/Colab Notebooks/model_charts/acc_loss{}.png'.format(extension_))"
+        "#fig.savefig('/content/gdrive/MyDrive/Colab Notebooks/model_charts/acc_loss{}.png'.format(extension_))"
       ],
       "execution_count": null,
       "outputs": []
@@ -692,7 +692,7 @@
         "plt.title(\"Training on NHAT Labeled Data - ResNet\")\n",
         "plt.xlabel(\"prediction\")\n",
         "plt.ylabel(\"label (ground truth)\")\n",
-        "plt.savefig('/content/gdrive/MyDrive/Colab Notebooks/model_charts/CMTX{}.png'.format(extension_))\n",
+        "#plt.savefig('/content/gdrive/MyDrive/Colab Notebooks/model_charts/CMTX{}.png'.format(extension_))\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -708,14 +708,14 @@
         "#class_names = [\"Possible Dementia\", \"Likely Dementia\", \"No Dementia\"]\n",
         "class_vals = [0,1,2]\n",
         "\n",
-        "cr = classification_report(y_test, all_pred, class_vals, output_dict = True)\n",
-        "try:\n",
-        "    cr_file = open('/content/gdrive/MyDrive/Colab Notebooks/model_charts/cr{}.txt'.format(extension_), 'wt')\n",
-        "    cr_file.write(str(cr))\n",
-        "    cr_file.close()\n",
+        "#cr = classification_report(y_test, all_pred, class_vals, output_dict = True)\n",
+        "#try:\n",
+        "    #cr_file = open('/content/gdrive/MyDrive/Colab Notebooks/model_charts/cr{}.txt'.format(extension_), 'wt')\n",
+        "    #cr_file.write(str(cr))\n",
+        "    #cr_file.close()\n",
         "  \n",
-        "except:\n",
-        "    print(\"Unable to write to file\")\n",
+        "#except:\n",
+        "    #print(\"Unable to write to file\")\n",
         "print(classification_report(y_test, all_pred, class_vals))\n"
       ],
       "execution_count": null,
@@ -768,7 +768,7 @@
         "ax_.set_title('ROC Curve for NHAT Labeled Data - ResNet')\n",
         "ax_.set_xlabel('False Positive Rate')\n",
         "ax_.set_ylabel('True Positive Rate')\n",
-        "plt.savefig('/content/gdrive/MyDrive/Colab Notebooks/model_charts/roc{}.png'.format(extension_))\n",
+        "#plt.savefig('/content/gdrive/MyDrive/Colab Notebooks/model_charts/roc{}.png'.format(extension_))\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -803,7 +803,7 @@
         "plt.legend(loc=\"best\")\n",
         "plt.title(\"NHAT Labeled Data - ResNet\")\n",
         "plt.suptitle(\"Precision vs. Recall Curve\")\n",
-        "plt.savefig('/content/gdrive/MyDrive/Colab Notebooks/model_charts/auc_pr{}.png'.format(extension_))\n",
+        "#plt.savefig('/content/gdrive/MyDrive/Colab Notebooks/model_charts/auc_pr{}.png'.format(extension_))\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -828,7 +828,7 @@
         "# Save GPU model\n",
         "model_name = 'cnn_512_662.model{}'.format(extension_)\n",
         "PATH = \"/content/gdrive/MyDrive/Colab Notebooks/Models/{}\".format(model_name)\n",
-        "torch.save(model.state_dict(), PATH)"
+        "#torch.save(model.state_dict(), PATH)"
       ],
       "execution_count": null,
       "outputs": []
